--- a/BeautifulPlot.Rmd
+++ b/BeautifulPlot.Rmd
@@ -1,12 +1,10 @@
 ---
-documentclass: article
 geometry: 
   - paper=a3paper
   - margin=2.5cm
-fontsize: 20pt
 linestretch: 1.5
 output:
-  pdf_document:
+  pdf_document: 
     latex_engine: xelatex
 header-includes:
   - \usepackage{geometry}
@@ -17,17 +15,12 @@ header-includes:
 
 ```{r setup, message=FALSE, warning=FALSE, results='hide', echo=FALSE}
 
-knitr::opts_chunk$set(echo = TRUE)
 
 cmdstanr::set_cmdstan_path(path = "C:/Users/kueng/.cmdstan/cmdstan-2.35.0")
 
 library(tidyverse)
 library(brms)
 library(bayesplot)
-library(showtext)
-showtext_auto()
-#par(cex = 1.5)  # Set a base size for text
-
 
 source(file.path('Functions', 'ReportModels.R'))
 source(file.path('Functions', 'PrettyTables.R'))
@@ -164,9 +157,8 @@ pa_sub <- my_brm(
 ```
 
 
-```{r fig.height=11, fig.width = 12, message=FALSE, warning=FALSE, echo=FALSE, dpi=900,results='hide', fig.showtext=TRUE}
-
-conditional_spaghetti(
+```{r message=FALSE, warning=FALSE, results='hide', echo=FALSE}
+p <- conditional_spaghetti(
   pa_sub, 
   effects = c(
     'persuasion_partner_cw'
@@ -181,11 +173,23 @@ conditional_spaghetti(
   , font_family = 'Candara'
   , p_title = "The Relationship Between Positive Control and Same-Day MVPA"
 )
-
-  
 ```
 
-**Note.** This graphic illustrates the relationship between positive control and moderate to vigorous physical activity (MVPA) using a Bayesian Hurdle-Lognormal Multilevel Model. The predictor is centered within individuals to examine how deviations from their average received positive control relate to same-day MVPA. Shaded areas indicate credible intervals, thick lines show fixed effects, and thin lines represent random effects, highlighting variability across couples.  
-The plots display the probability of being active, expected minutes of MVPA when active, and combined predicted MVPA. The bottom density plot visualizes the posterior distributions of slope estimates, transformed to represent multiplicative changes in odds ratios (hurdle component) or expected values. Medians and 95% credible intervals (2.5th and 97.5th percentiles) are shown. The hurdle and combined slopes are significant, but the slope for expected MVPA when active is not, as its 95% credible interval overlaps 1.
+
+```{r echo=FALSE, fig.height=11, fig.width=12, message=FALSE, warning=FALSE, dpi=900}
+
+ggsave('beautifulplot.svg', p[[1]], width = 12, height = 11, dpi = 900)
+rsvg::rsvg_pdf("beautifulplot.svg", "000beautifulplot.pdf")
+
+knitr::include_graphics('000beautifulplot.pdf')
+
+
+```
+
+
+\begin{large}
+\textit{Note}. This graphic illustrates the relationship between positive control and moderate to vigorous physical activity (MVPA) using a Bayesian Hurdle-Lognormal Multilevel Model. The predictor is centered within individuals to examine how deviations from their average received positive control relate to same-day MVPA. Shaded areas indicate credible intervals, thick lines show fixed effects, and thin lines represent random effects, highlighting variability across couples.  \\
+The plots display the probability of being active, expected minutes of MVPA when active, and combined predicted MVPA. The bottom density plot visualizes the posterior distributions of slope estimates, transformed to represent multiplicative changes in odds ratios (hurdle component) or expected values. Medians and 95\% credible intervals (2.5th and 97.5th percentiles) are shown. The hurdle and combined slopes are significant, but the slope for expected MVPA when active is not, as its 95\% credible interval overlaps 1.
+\end{large}
 
 
