--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -555,7 +555,7 @@ DHARMa.check_brms.all(pa_sub, integer = TRUE, outliers_type = 'bootstrap')
 ```
 
 
-```{r report_pa_sub_lognormal, results='asis', fig.width=8, fig.height=7, dpi=300, fig.showtext=TRUE}
+```{r report_pa_sub_lognormal, results='asis', fig.width=8, fig.height=7, dpi=300}
 
 # summarize with rope range for hurdle part
 summary_pa_sub_hu <- summarize_brms(
@@ -644,7 +644,7 @@ plot(
 
 ```
 
-```{r report_pa_sub_lognormald, fig.height=11, fig.width=12, dpi=600, fig.showtext=TRUE, results='asis'}
+```{r report_pa_sub_lognormald, fig.height=11, fig.width=12, dpi=600, results='asis'}
 
 conds_eff <- conditional_spaghetti(
   pa_sub, 
@@ -659,17 +659,17 @@ conds_eff <- conditional_spaghetti(
   group_var = 'coupleID',
   plot_full_range = TRUE,
   y_limits = c(0, 100),
-  y_label = 'MVPA',
-  y_labels = c('Probability of MVPA > 0', 'Expected MVPA When Active', 'Overall Expected MVPA'),
-  ,filter_quantiles = .9995,
-  font_family = 'Candara'
+  y_label = "Same-Day MVPA",
+  y_labels = c('Probability of Being Active', 'Minutes of MVPA When Active', 'Overall Expected Minutes of MVPA'),
+  , filter_quantiles = .9995
+  , font_family = 'Candara'
 )
 
 print(conds_eff)
 
 ```
 
-```{r fig.height=11, fig.width = 12, dpi=1200, fig.showtext=TRUE}
+```{r fig.height=11, fig.width = 12, dpi=1200}
 
 
 conditional_spaghetti(
@@ -903,7 +903,7 @@ DHARMa.check_brms.all(mood_gauss, integer = FALSE)
 
 ```
 
-```{r report_mood_gauss, results='asis', fig.width=8, fig.height=6, dpi=300, fig.showtext=TRUE}
+```{r report_mood_gauss, results='asis', fig.width=8, fig.height=6, dpi=300}
 
 summarize_brms(
   mood_gauss, 
@@ -1028,7 +1028,7 @@ DHARMa.check_brms.all(reactance_ordinal, outliers_type = 'bootstrap')
 
 ```
 
-```{r report_reactance_ordinal, results='asis', fig.width=8, fig.height=6, dpi=300, fig.showtext=TRUE}
+```{r report_reactance_ordinal, results='asis', fig.width=8, fig.height=6, dpi=300}
 
 summarize_brms(
   reactance_ordinal, 
@@ -1160,7 +1160,7 @@ DHARMa.check_brms.all(is_reactance, integer = FALSE)
 
 ```
 
-```{r report_is_reactance, results='asis', fig.width=8, fig.height=6, dpi=300, fig.showtext=TRUE}
+```{r report_is_reactance, results='asis', fig.width=8, fig.height=6, dpi=300}
 
 summarize_brms(
   is_reactance, 
