--- a/01_FinalModels.Rmd
+++ b/01_FinalModels.Rmd
@@ -53,6 +53,7 @@ use_mi = FALSE
 shutdown = TRUE
 report_ordinal = TRUE
 report_hurdle = TRUE
+do_priorsense = FALSE
 
 options(
   dplyr.print_max = 100, 
@@ -549,6 +550,14 @@ pa_sub <- my_brm(
 pa_sub_digest <- digest::digest(pa_sub)
 
 
+summary(pa_sub, priors = TRUE, robust = TRUE)
+summary(pa_sub, priors = TRUE, robust = FALSE)
+
+bayestestR::hdi(pa_sub)
+bayestestR::spi(pa_sub)
+bayestestR::eti(pa_sub)
+
+
 ```
 
 
@@ -559,31 +568,33 @@ DHARMa.check_brms.all(pa_sub, integer = TRUE, outliers_type = 'bootstrap')
 
 
 ```{r check_pa_sub_lognormal_priorsense, cache=TRUE, cache.extra=pa_sub_digest}
-priorsense_vars <- c(
-    'Intercept',
-    'b_persuasion_self_cw',
-    'b_persuasion_partner_cw',
-    'b_pressure_self_cw',
-    'b_pressure_partner_cw',
-    'b_pushing_self_cw',
-    'b_pushing_partner_cw'
-)
-
-hurdle_priorsense_vars <- c(
-  'Intercept_hu',
-  'b_hu_persuasion_self_cw',
-  'b_hu_persuasion_partner_cw',
-  'b_hu_pressure_self_cw',
-  'b_hu_pressure_partner_cw',
-  'b_hu_pushing_self_cw',
-  'b_hu_pushing_partner_cw'
-)
-
-gc()
-priorsense::powerscale_sensitivity(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
-priorsense::powerscale_plot_dens(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
-priorsense::powerscale_plot_ecdf(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
-priorsense::powerscale_plot_quantities(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
+if (do_priorsense) {
+  priorsense_vars <- c(
+      'Intercept',
+      'b_persuasion_self_cw',
+      'b_persuasion_partner_cw',
+      'b_pressure_self_cw',
+      'b_pressure_partner_cw',
+      'b_pushing_self_cw',
+      'b_pushing_partner_cw'
+  )
+  
+  hurdle_priorsense_vars <- c(
+    'Intercept_hu',
+    'b_hu_persuasion_self_cw',
+    'b_hu_persuasion_partner_cw',
+    'b_hu_pressure_self_cw',
+    'b_hu_pressure_partner_cw',
+    'b_hu_pushing_self_cw',
+    'b_hu_pushing_partner_cw'
+  )
+  
+  gc()
+  priorsense::powerscale_sensitivity(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
+  priorsense::powerscale_plot_dens(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
+  priorsense::powerscale_plot_ecdf(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
+  priorsense::powerscale_plot_quantities(pa_sub, variable = c(priorsense_vars, hurdle_priorsense_vars))
+}
 
 ```
 
@@ -840,12 +851,13 @@ DHARMa.check_brms.all(pa_obj_log, integer = TRUE, outliers_type = 'bootstrap')
 
 
 ```{r check_pa_obj_log_priorsense, cache=TRUE, cache.extra=pa_obj_log_digest}
-
-gc()
-priorsense::powerscale_sensitivity(pa_obj_log, variable = priorsense_vars)
-priorsense::powerscale_plot_dens(pa_obj_log, variable = priorsense_vars)
-priorsense::powerscale_plot_ecdf(pa_obj_log, variable = priorsense_vars)
-priorsense::powerscale_plot_quantities(pa_obj_log, variable = priorsense_vars)
+if (do_priorsense) {
+  gc()
+  priorsense::powerscale_sensitivity(pa_obj_log, variable = priorsense_vars)
+  priorsense::powerscale_plot_dens(pa_obj_log, variable = priorsense_vars)
+  priorsense::powerscale_plot_ecdf(pa_obj_log, variable = priorsense_vars)
+  priorsense::powerscale_plot_quantities(pa_obj_log, variable = priorsense_vars)
+}
 
 ```
 
@@ -967,12 +979,13 @@ DHARMa.check_brms.all(mood_gauss, integer = FALSE)
 
 ```{r check_mood_gauss_priorsense, cache=TRUE, cache.extra=mood_gauss_digest}
 
-gc()
-priorsense::powerscale_sensitivity(mood_gauss, variable = priorsense_vars)
-priorsense::powerscale_plot_dens(mood_gauss, variable = priorsense_vars)
-priorsense::powerscale_plot_ecdf(mood_gauss, variable = priorsense_vars)
-priorsense::powerscale_plot_quantities(mood_gauss, variable = priorsense_vars)
-
+if (do_priorsense) {
+  gc()
+  priorsense::powerscale_sensitivity(mood_gauss, variable = priorsense_vars)
+  priorsense::powerscale_plot_dens(mood_gauss, variable = priorsense_vars)
+  priorsense::powerscale_plot_ecdf(mood_gauss, variable = priorsense_vars)
+  priorsense::powerscale_plot_quantities(mood_gauss, variable = priorsense_vars)
+}
 
 ```
 
@@ -1105,12 +1118,13 @@ DHARMa.check_brms.all(reactance_ordinal, outliers_type = 'bootstrap')
 
 ```{r check_reactance_ordinal_priorsense, cache=TRUE, cache.extra=reactance_ordinal_digest}
 
-gc()
-priorsense::powerscale_sensitivity(reactance_ordinal, variable = priorsense_vars)
-priorsense::powerscale_plot_dens(reactance_ordinal, variable = priorsense_vars)
-priorsense::powerscale_plot_ecdf(reactance_ordinal, variable = priorsense_vars)
-priorsense::powerscale_plot_quantities(reactance_ordinal, variable = priorsense_vars)
-
+if (do_priorsense) {
+  gc()
+  priorsense::powerscale_sensitivity(reactance_ordinal, variable = priorsense_vars)
+  priorsense::powerscale_plot_dens(reactance_ordinal, variable = priorsense_vars)
+  priorsense::powerscale_plot_ecdf(reactance_ordinal, variable = priorsense_vars)
+  priorsense::powerscale_plot_quantities(reactance_ordinal, variable = priorsense_vars)
+}
 
 ```
 
@@ -1246,12 +1260,13 @@ DHARMa.check_brms.all(is_reactance, integer = FALSE)
 
 
 ```{r check_is_reactance_priorsense, cache=TRUE, cache.extra=is_reactance_digest}
-
-gc()
-priorsense::powerscale_sensitivity(is_reactance, variable = priorsense_vars)
-priorsense::powerscale_plot_dens(is_reactance, variable = priorsense_vars)
-priorsense::powerscale_plot_ecdf(is_reactance, variable = priorsense_vars)
-priorsense::powerscale_plot_quantities(is_reactance, variable = priorsense_vars)
+if (do_priorsense) {
+  gc()
+  priorsense::powerscale_sensitivity(is_reactance, variable = priorsense_vars)
+  priorsense::powerscale_plot_dens(is_reactance, variable = priorsense_vars)
+  priorsense::powerscale_plot_ecdf(is_reactance, variable = priorsense_vars)
+  priorsense::powerscale_plot_quantities(is_reactance, variable = priorsense_vars)
+}
 
 ```
 
